# parser

./: CMakeLists.txt  FormulaParser.cpp  FormulaParser.hpp  main  main.cpp  operands.hpp  text_function.txt
